--- a/resume/config.toml
+++ b/resume/config.toml
@@ -42,35 +42,41 @@ googleAnalytics = "UA-XXXXXXX-Y"
         [[params.skills.list]]
         title = "Programming Languages"
         [[params.skills.list.items]]
-        details = "C++, Java, Python, Bash, Javascript, HTML/CSS"
+        details = "C++, Python, Bash (10 yrs)"
+        [[params.skills.list.items]]
+        details = "Javascript, HTML/CSS (5 yrs)"
+        [[params.skills.list.items]]
+        details = "Java (3 yrs)"
 
         [[params.skills.list]]
         title = "Technical"
         [[params.skills.list.items]]
-        details = "JavaScript/Angular/React/Vue"
-        [[params.skills.list.items]]
-        details = "Python/Ruby/PHP"
-        [[params.skills.list.items]]
-        details = "Node.js/ASP.NET"
-        [[params.skills.list.items]]
-        details = "PostgreSQL/MySQL"
+        details = "Modern C++ design / STL"
         [[params.skills.list.items]]
         details = "Object-oriented design"
         [[params.skills.list.items]]
-        details = "Design and implement database structures"
+        details = "Software benchmarking and optimization"
+        [[params.skills.list.items]]
+        details = "Linux kernel debugging"
+        [[params.skills.list.items]]
+        details = "C++ microservice design"
+
+        [[params.skills.list.items]]
+        details = "Unit and component test frameworks"
         [[params.skills.list.items]]
         details = "Lead and deliver complex software systems"
 
         [[params.skills.list]]
         title = "Professional"
         [[params.skills.list.items]]
-        details = "Effective communication"
+        details = "Strong technical problem solver"
         [[params.skills.list.items]]
         details = "Team player"
         [[params.skills.list.items]]
-        details = "Strong problem solver"
+        details = "Effective communicator"
         [[params.skills.list.items]]
-        details = "Good time management"
+        details = "Working with and leading agile teams"
+
 
     [params.education]
         enable = true
@@ -78,7 +84,7 @@ googleAnalytics = "UA-XXXXXXX-Y"
         [[params.education.list]]
         degree = "BSc Computer Engineering"
         university = "Marquette University"
-        honors = "magna cum launde"
+        honors = "magna cum laude"
         dates = "2005 - 2010"
 
     [params.awards]
@@ -104,90 +110,62 @@ googleAnalytics = "UA-XXXXXXX-Y"
 
     [params.summary]
         enable = true
-        text = """I am an experienced and motivated software engineer with 10 years of development experience.  with , experience software engineer with
-                Successfully Leading advanced technology projects within the healthcare space
-
-                I have a passion for modern software architecture and design, staunch advocate of clean coding practice
-
-                Adept at tacking difficult technical problems
-                Have broad experience in many technologies that make me adept at tacking difficult technical problems
-                no problem that is too difficult and full stack knowledge and capable of root causing debugging complex kernel and board level debugging techniques.
-                """
+        text = """I am an experienced and highly motivated software engineer with over 10 years of hands on experience creating and implementing software designs and leading advanced technology projects. I have a passion for modern software design practices and working with cutting edge technologies. I have wide ranging experiences in product design, working closely with customers, systems engineers, researchers, and developers to produce many innovative and life-saving products in the healthcare industry."""
 
     [params.experience]
         enable = true
 
         [[params.experience.list]]
-        title = "Staff Software Engineer,<br>Senior Software Engineer"
-        title2 = "Senior Software Engineer"
-        dates = "2019 - 2020<br>2016 - 2019"
+        title = "Staff Software Engineer,"
+        dates = "2019 - 2020"
         company = "XRay Engineering | GE Healthcare"
-        details = """"""
+        title_alt = "Senior Software Engineer"
+        dates_alt = "2016 - 2019"
+        details = """Software developer and team lead working on new product development for fixed and mobile xray products. I lead a wide array of initiatives across software subsystems, focused on integrating new xray detector technologies and improving software quality and reliability, as well as evaluating new technologies in AI and computer vision."""
+
         [[params.experience.list.items]]
-        details = "Lorem ipsum dolor sit amet, consectetuer."
+        details = "Collaborated with third-party detector vendors for integrating their SDKs into xray products. Implemented a detector abstraction API based on ZMQ communication framework to facilitate quicker integration of additional detectors and improve reliability."
         [[params.experience.list.items]]
-        details = "Aenean commodo ligula eget dolor."
+        details = "Redesigned the product network architecture using network namespaces and layer 2 hardware / 802.1Q VLAN tagging. Developed device monitoring software using SNMP to remotely sense physical connect/disconnect of xray detectors."
         [[params.experience.list.items]]
-        details = "Etiam ultricies nisi vel augue."
+        details = "Developed prototypes for first on-device artificial intelligence algorithm for detecting Pneumothorax in patient images. Worked closely with data scientists to benchmark and optimize model performance."
         [[params.experience.list.items]]
-        details = "Aenean commodo ligula eget dolor."
-        [[params.experience.list.items]]
-        details = "Etiam ultricies nisi vel augue."
+        details = "Lead a computer vision ATD project to improve patient positioning and protocol selection by using depth cameras to estimate patient size and position. Developed a video streaming platform based on gstreamer and WebRTC protocols that is used across GEHC for integrating computer vision algorithms into live streaming applications. "
 
         [[params.experience.list]]
-        title = "Lead Software Engineer,<br>Software Engineer"
-        dates = "2014 - 2016<br>2011 - 2014"
+        title = "Lead Software Engineer,"
+        dates = "2014 - 2016"
         company = "PET/CT Engineering | GE Healthcare"
-        details = """Role description goes here ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-
-        HPC compute platform for PET Time-of-flight iterative osem reconstruction algorithms. OpenCL
-        Specializing in Linux kernel level performance optimizations
-        hardware benchmarking and disk caching disk technologies (RAID)
-
-        15 to 21 million improvement to enable high sensitivity PET-MR solid state photomultiplier
-        sorting and histogramming pipeline capable of processing 21 PET TOF million coincidence events per second ()
-
-        Developing both software and hardware caching mechanisms for optimizal write throughput
-        advanced disk technogies including solid state disk
-        PET reconstruction and 4D TOF histogramming
-        HDF5
-
-        """
+        title_alt = "Software Engineer"
+        dates_alt = "2011 - 2014"
+        details = """Software engineer focused on image acquisition and reconstruction software development for Position Emission Tomography scanners.   In this role, I gained experience in C++ design and Linux development, and developed a passion for high performance computing and software performance optimization."""
 
         [[params.experience.list.items]]
-        details = "Lorem ipsum dolor sit amet, consectetuer."
+        details = "Lead the development of a new data acquisition and reconstruction compute platform by evaluating new technologies for improving data throughput, including multi-CPU architectures, discrete GPUs, and SSDs. Achieved a 40% data throughput increase capable of performing TOF List mode acquisitions of up to 21 million events per second."
         [[params.experience.list.items]]
-        details = "Aenean commodo ligula eget dolor."
+        details = "Implemented the manual calibration and iterative CTC calibration algorithms for BGO PET detectors, and worked closely with systems scientists to evaluate accuracy and performance of the implementations."
         [[params.experience.list.items]]
-        details = "Etiam ultricies nisi vel augue."
+        details = "Worked directly with support engineers to diagnose software and hardware failures in the field, and to develop new diagnostic software for monitoring and predicting hardware failures."
         [[params.experience.list.items]]
-        details = "Aenean commodo ligula eget dolor."
+        details = "Collaborated with global research team to productize the first ever device-less respiratory gating algorithm. Converted and optimized the MATLAB PCA algorithm into C++ and integrated processing into the PET coincidence stream. "
         [[params.experience.list.items]]
-        details = "Etiam ultricies nisi vel augue."
+        details = "Developed a vendor independant file format for PET sinogram and list data based on HDF5 that is used by scientists and researchers. Implemented using HDF5, it incorporates GE proprietary algorithms to transparently compress and decompress data."
 
         [[params.experience.list]]
         title = "Early Identification Co-op Program"
         dates = "2007 - 2009"
         company = "GE Healthcare"
-        details = "As a GEHC Early Identification (EID) program participant, I completed 4 semester long rotations in different healthcare engineering modalities, including Computed Tomography, Patient Monitoring, and technology tools teams. Upon program graduation, I received the W. D. Bliss Outstanding Co-op Award for my contributions to the organization."
+        details = "Participant in the GEHC Early Identification (EID) program, where I completed 4 semester long rotations in different healthcare engineering modalities, including Computed Tomography, Patient Monitoring, and technology tools teams. Upon program graduation, I received the W. D. Bliss Outstanding Co-op Award for my contributions."
 
     [params.projects]
         enable = true
 
         [[params.projects.list]]
-        title = "PET Raw Data Format"
+        title = "HDF5 (Hierarchical Data Format)"
         meta = "Open Source"
-        tagline = "You can use this section for your side projects. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus."
-
-        [[params.projects.list]]
-        title = "Project Hubble"
-        meta = "Open Source"
-        tagline = "You can use this section for your side projects. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim."
-
-        [[params.projects.list]]
-        title = "Project Praesent"
-        meta = "Open Source"
-        tagline = "You can use this section for your side projects. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim."
+        tagline = "Implemented the direct chunk read API in the HDF5 open source project, which enables performance critical applications to perform data decompression and filtering independent of the HDF5 API."
+        [[params.projects.list.items]]
+        details = "Etiam ultricies nisi vel augue."
 
     [params.information]
         enable = false
